# tw3720tu.2017

./: .gitignore  CMakeLists.txt  README.md
include/: heat1d.h  heat2d.h  helpers.h  matrix.h  vec_old.h  vector.h
src/: main.cpp  matrix.cpp  vector.cpp
